# Mango3

./: .gitignore  Cargo.toml  Catalog.sqlite3
analysis/: Cargo.toml
analysis/src/: determinator.rs  gender.rs  lib.rs
analysis/src/noun_constituent/: determinator.rs  mod.rs
app/: Cargo.toml
app/src/: main.rs
catalog/: Cargo.toml
catalog/src/: catalog.rs  lib.rs  verb.rs  word.rs
parser/: Cargo.toml
parser/src/: document.rs  error.rs  input.rs  lib.rs  parser.rs  sentence.rs
syntax/: Cargo.toml
syntax/src/: document.rs  lib.rs  range.rs
syntax/src/constituent/: mod.rs  noun.rs  verb.rs
syntax/src/determinator/: atomic.rs  mod.rs
syntax/src/sentence/: actor.rs  independent_clause.rs  mod.rs
syntax/src/substantive/: mod.rs
web/: Cargo.toml
web/src/: main.rs
web/wwwroot/: analyses.js  index.html
